# bazel-gazelle

./: MODULE.bazel
cmd/bzlmod/: BUILD.bazel  bzlmod.go
cmd/gzlmod/: gzlmod.go
internal/: go_repository_tools.bzl  go_repository_tools_srcs.bzl
internal/bzlmod/: go_deps.bzl  go_mod.bzl  non_module_deps.bzl  utils.bzl
label/: BUILD.bazel  label.go  label_test.go
language/go/: BUILD.bazel  bzlmod.go  modules.go
rule/: rule.go
tests/bzlmod/: BUILD.bazel  fs.bzl  go_deps_test.bzl  module_ctx.bzl  os.bzl  test_module_extension.bzl  utils_test.bzl
